Added API service endpoint to fetch coffee makers.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <script src="https://kit.fontawesome.com/82d5bca872.js" crossorigin="anonymous"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
